<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_left"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_right"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <ImageView
        android:id="@+id/iv_app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_app_logo"
        android:src="@drawable/image_app_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gl_left"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto_900"
        android:text="@string/app_name"
        android:textColor="@color/orange"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_app_logo"
        app:layout_constraintStart_toEndOf="@+id/iv_app_logo"
        app:layout_constraintTop_toTopOf="@+id/iv_app_logo" />

    <TextView
        android:id="@+id/tv_greetings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_900"
        android:text="@string/greetings"
        android:textColor="@color/orange"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gl_right"
        app:layout_constraintStart_toStartOf="@+id/gl_left"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17" />

    <TextView
        android:id="@+id/tv_authorize_to_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_500"
        android:text="@string/text_under_greetings"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/gl_right"
        app:layout_constraintStart_toStartOf="@+id/gl_left"
        app:layout_constraintTop_toBottomOf="@+id/tv_greetings" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints="name"
        android:background="@drawable/bg_authorize_field"
        android:fontFamily="@font/inter_500"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        android:paddingHorizontal="32dp"
        android:paddingVertical="16dp"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/et_number"
        app:layout_constraintEnd_toStartOf="@+id/gl_right"
        app:layout_constraintStart_toStartOf="@+id/gl_left"
        app:layout_constraintTop_toBottomOf="@+id/tv_authorize_to_continue"
        app:layout_constraintVertical_chainStyle="spread" />

    <EditText
        android:id="@+id/et_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="phone"
        android:background="@drawable/bg_authorize_field"
        android:fontFamily="@font/inter_500"
        android:hint="@string/hint_number"
        android:inputType="phone"
        android:paddingHorizontal="32dp"
        android:paddingVertical="16dp"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/et_password"
        app:layout_constraintEnd_toStartOf="@+id/gl_right"
        app:layout_constraintStart_toStartOf="@+id/gl_left"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:background="@drawable/bg_authorize_field"
        android:fontFamily="@font/inter_500"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:paddingHorizontal="32dp"
        android:paddingVertical="16dp"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/et_repeat_password"
        app:layout_constraintEnd_toStartOf="@+id/gl_right"
        app:layout_constraintStart_toStartOf="@+id/gl_left"
        app:layout_constraintTop_toBottomOf="@+id/et_number" />

    <EditText
        android:id="@+id/et_repeat_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:autofillHints="password"
        android:background="@drawable/bg_authorize_field"
        android:fontFamily="@font/inter_500"
        android:hint="@string/hint_repeat_password"
        android:inputType="textPassword"
        android:paddingHorizontal="32dp"
        android:paddingVertical="16dp"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_sign_in"
        app:layout_constraintEnd_toStartOf="@+id/gl_right"
        app:layout_constraintStart_toStartOf="@+id/gl_left"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <TextView
        android:id="@+id/bt_sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_authorize_bt"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/inter_700"
        android:gravity="center"
        android:paddingVertical="16dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gl_right"
        app:layout_constraintStart_toStartOf="@+id/gl_left"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <View
        android:id="@+id/split_line"
        android:layout_width="70dp"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/bt_already_have_acc"
        app:layout_constraintEnd_toStartOf="@+id/gl_right"
        app:layout_constraintStart_toStartOf="@+id/gl_left"
        app:layout_constraintTop_toBottomOf="@+id/bt_sign_in" />

    <TextView
        android:id="@+id/bt_already_have_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_500"
        android:text="@string/already_have_acc"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_log_in"
        app:layout_constraintEnd_toStartOf="@+id/gl_right"
        app:layout_constraintStart_toStartOf="@+id/gl_left"
        app:layout_constraintTop_toBottomOf="@id/split_line" />

    <TextView
        android:id="@+id/bt_log_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_authorize_down_bt"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/inter_700"
        android:gravity="center"
        android:paddingVertical="16dp"
        android:text="@string/log_in"
        android:textColor="@color/orange"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gl_right"
        app:layout_constraintStart_toStartOf="@+id/gl_left"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96" />

</androidx.constraintlayout.widget.ConstraintLayout>